--- a/.classpath
+++ b/.classpath
@@ -5,5 +5,10 @@
 	<classpathentry kind="con" path="org.eclipse.fx.ide.jdt.core.JAVAFX_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/ItunesUtil"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/xStream"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/RXTX">
+		<attributes>
+			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="/Users/JEAcomputer/Documents/Desktoday/June 1 2015/rxtx-2.1-7-bins-r2"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
